switch ir backbone to bm25p, handle short queries better

--- a/src/Infidex.Example/Infidex.Example.csproj
+++ b/src/Infidex.Example/Infidex.Example.csproj
@@ -16,6 +16,9 @@
       <None Update="movies.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="schools.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
