--- a/src/Infidex.Tests/Infidex.Tests.csproj
+++ b/src/Infidex.Tests/Infidex.Tests.csproj
@@ -28,6 +28,9 @@
       <None Update="movies.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="schools.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
