add 1M sample dataset

--- a/src/Infidex.Example/Infidex.Example.csproj
+++ b/src/Infidex.Example/Infidex.Example.csproj
@@ -19,6 +19,9 @@
       <None Update="schools.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="movies1M.csv">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
