--- a/src/Infidex.Tests/Infidex.Tests.csproj
+++ b/src/Infidex.Tests/Infidex.Tests.csproj
@@ -31,6 +31,9 @@
       <None Update="schools.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="movies1M.csv">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
