--- a/src/Infidex.Benchmark/Infidex.Benchmark.csproj
+++ b/src/Infidex.Benchmark/Infidex.Benchmark.csproj
@@ -21,6 +21,9 @@
       <None Update="movies.csv">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="movies1M.csv">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
